[package]
name = "utf8-decode"
version = "1.0.1"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2018"
categories = ["parsing"]
keywords = ["utf8", "decode", "iterator"]
description = "UTF-8 incremental decoding iterators."
repository = "https://github.com/timothee-haudebourg/utf8-decode"
documentation = "https://docs.rs/utf8-decode"
license = "MIT/Apache-2.0"

[features]
default = [ "std" ]
std = [ ]

# investigate whether 'no_std' feature and 'no_std_io' dependency
# can be removed when core::error is stabilized
no_std = [ "dep:no_std_io" ]

[dependencies]
cfg-if = "1.0"
no_std_io = { version = "0.6.0", optional = true }

[[example]]
name = "safe"
required-features = [ "std" ]

[[example]]
name = "unsafe"
required-features = [ "std" ]